# 42coding_challange

./: README.md  clean.py  grademe.py  pyproject.toml
challenges/easy/check_one_string_swap/: solution.c  subject.txt  test_solution.py
challenges/easy/merge_sorted_array/: subject.txt  test_solution.py
challenges/easy/two_sum/: README.md  solution.c  solution.py  subject.txt  test_solution.py
challenges/hard/minimum_increment_unique/: solution.c  subject.txt  test_solution.py
challenges/medium/filter_prime_numbers/: solution.c  subject.txt  test_solution.py
challenges/medium/merge_sorted_array/: solution.c  subject.txt  test_solution.py
