[project]
name = "coding-challenge"
version = "0.1.0"
description = "Local coding challenge environment for students"
requires-python = ">=3.11"
dependencies = [
  "pytest>=8.0.0",
]

[project.scripts]
grademe = "grademe:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["challenges"]
